--- a/src/main/resources/static/web/pages/createCards.html
+++ b/src/main/resources/static/web/pages/createCards.html
@@ -95,26 +95,26 @@
             <h1 class="font-bold text-3xl text-[#004481] lg:mt-7 w-full text-center lg:text-5xl">Your New Card</h1>
         </div>
         <form @submit.prevent="createCard()" class="cards-form">
-            <div class="w-full text-center md:text-start">
-                <label class="text-[#004481] font-semibold text-2xl text-center">Select a card type</label>
+            <div class="w-full mb-2">
+                <label class="text-zinc-800 font-semibold text-lg  text-center">Select a card type</label>
             </div>
-                <select class="w-full rounded-md py-1 px-3" name="type" id="type" v-model="type">
+                <select class="w-full rounded-md py-1 bg-blue-300/30 px-3" name="type" id="type" v-model="type">
                     <option value="" disabled selected>Select a card type</option>
                     <option value="DEBIT">Debit</option>
                     <option value="CREDIT">Credit</option>
                 </select>
-            <div class="w-full text-center md:text-start mt-3 md:mt-10">
-                <label class="text-[#004481] font-semibold text-2xl text-center">Select a color</label>
+            <div class="w-full mt-6 md:mt-10 mb-2">
+                <label class="text-zinc-800 font-semibold text-lg text-center">Select a color</label>
             </div>
-                <select class="w-full rounded-md py-1 px-3" name="color" id="color" v-model="color">
+                <select class="w-full rounded-md py-1 bg-blue-300/30 px-3" name="color" id="color" v-model="color">
                     <option value="" disabled selected class=".placeholder-gray-500">Select a card color</option>
                     <option value="GOLD">Gold</option>
                     <option value="SILVER">Silver</option>
                     <option value="TITANIUM">Titanium</option>
                 </select>
-            <button type="submit" class="bg-[#004481] hover:bg-[#004481] text-white font-bold py-2 px-4 rounded w-5/12 mt-5 md:mt-8">Create</button>
+            <button type="submit" class="bg-[#004481] hover:bg-[#004481] place-self-center text-white font-bold py-2 px-4 rounded w-5/12 mt-8 md:mt-8">Create</button>
             <div v-if="error" >
-                <p class="text-red-500 text-center text-md">*{{error}}</p>
+                <p class="text-red-500 text-center text-md mt-5">*{{error}}</p>
             </div>
         </form>
     </main>
