--- a/src/main/resources/static/web/pages/loan-application.html
+++ b/src/main/resources/static/web/pages/loan-application.html
@@ -96,66 +96,76 @@
                 <h1 class="font-bold text-3xl text-[#004481] lg:mt-7 w-full text-center lg:text-5xl">Loan Application</h1>
             </div>
             <p class="w-11/12 md:text-xl lg:mt-5 text-center">Review our different loans and choose the one that best meets your needs. Fill out the form to complete you application.</p>
-            <div class="flex flex-col flex-wrap items-center lg:flex-row  justify-around lg:gap-10 lg:mt-5">
+            <div class="flex flex-col w-full md:w-10/12 flex-wrap items-center lg:flex-row  justify-around lg:gap-10 lg:mt-5">
                 <template v-for="availableLoan in availableLoans">
                     <div class="flex flex-col items-center p-2 w-9/12 lg:w-[21rem] lg:py-4 my-3 lg:-mt-1 gap-3 bg-gradient-to-l from-orange-200 to-rose-200 shadow-md shadow-slate-400 rounded-lg">
                         <h4 class="font-semibold text-2xl text-zinc-950">{{availableLoan.name}}</h4>
-                        <p class="text-slate-600">Maximum Amount: <span class="font-bold text-lg text-slate-900">{{availableLoan.maxAmount.toLocaleString("en-US", {style:"currency", currency:"USD"})}}</span></p>
-                        <p class="text-slate-700"><span class="font-bold text-lg text-slate-900">{{availableLoan.payments}}</span> Monthly Payments</p>
+                        <p class="text-slate-600 text-center">Maximum Amount: <span class="font-bold text-lg text-slate-900">{{availableLoan.maxAmount.toLocaleString("en-US", {style:"currency", currency:"USD"})}}</span></p>
+                        <p class="text-slate-700 text-center">Interest Rate: <span class="font-bold text-lg text-slate-900">{{availableLoan.interest * 100}}%</span></p>
+                        <p class="text-slate-700 text-center"><span class="font-bold text-lg text-slate-900">{{availableLoan.payments}}</span> Monthly Payments</p>
                     </div>
                 </template>
             </div>
                 <form @submit.prevent="createLoan()" class="loans-form">
-                    <label for="targetAcc" class="text-sm md:text-base text-zinc-800 font-semibold mt-3">Select Target Account</label>
+                    <label for="targetAcc" class="text-lg mb-2 text-zinc-800 font-semibold mt-3">Select Target Account</label>
                     <select name="targetAcc"  class="w-full mb-2 bg-blue-300/30 p-1 rounded-md" v-model="targetAccount">
                         <option value="" disabled selected>Select Account</option>
                         <option v-for="account in accounts" :value="account.number">{{account.number}}</option>
                     </select>
-                    <label for="loanId" class="text-sm md:text-base text-zinc-800 font-semibold mt-3">Loan Type</label>
+                    <label for="loanId" class="text-lg mb-2 text-zinc-800 font-semibold mt-3">Loan Type</label>
                     <select name="loanId"  class="w-full mb-3 bg-blue-300/30 p-1 rounded-md" v-model="loanId">
                         <option value="" disabled selected>Select The Type Of Loan You Want</option>
                         <option v-for="availableLoan in availableLoans" :value="availableLoan.id">{{availableLoan.name}}</option>
                     </select>
                     <div v-if="loanId == 1">
                         <div class="my-3">
-                            <label for="amount" class="text-sm md:text-base text-zinc-800 font-semibold mt-3">Select The Financing Amount <span class=" text-gray-500">(Maximum Amount: {{availableLoans[0].maxAmount.toLocaleString("en-US", {style:"currency", currency:"USD"})}})</span></label>
+                            <label for="amount" class="text-lg mb-2 text-zinc-800 font-semibold mt-3">Select The Financing Amount <span class=" text-gray-500">(Maximum Amount: {{availableLoans[0].maxAmount.toLocaleString("en-US", {style:"currency", currency:"USD"})}})</span></label>
                             <input name="amount" type="number" min="0" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" placeholder="$10,000.00" class="w-full mb-2 bg-blue-300/30 p-1 rounded-md" v-model="amount">
                         </div>
                         <div class="my-3">
-                            <label for="loanId" class="text-sm md:text-base text-zinc-800 font-semibold mt-3">Select Monthly Payments</label>
-                            <select name="loanId"  class="w-full mb-6 bg-blue-300/30 p-1 rounded-md" v-model="payments">
+                            <label for="loanId" class="text-lg mb-2 text-zinc-800 font-semibold mt-3">Select Monthly Payments</label>
+                            <select name="loanId"  class="w-full mb-3 bg-blue-300/30 p-1 rounded-md" v-model="payments">
                                 <option value="" disabled selected>Select The Number Of Payments</option>
                                 <option v-for="payment in availableLoans[0].payments" :value="payment" >{{payment}}</option>
                             </select>
                         </div>
+                        <div>
+                            <p>Estimated Total: <span class="text-slate-800 font-semibold">{{(amount * (1 + availableLoans[0].interest )).toLocaleString("en-US", {style: "currency", currency: "USD"})}}</span></p>
+                        </div>
                     </div>
                     <div v-if="loanId == 2">
                         <div class="my-3">
-                            <label for="amount" class="text-sm md:text-base text-zinc-800 font-semibold mt-3">Select The Financing Amount <span class=" text-gray-500">(Maximum Amount: {{availableLoans[1].maxAmount.toLocaleString("en-US", {style:"currency", currency:"USD"})}})</span></label>
+                            <label for="amount" class="text-lg mb-2 text-zinc-800 font-semibold mt-3">Select The Financing Amount <span class=" text-gray-500">(Maximum Amount: {{availableLoans[1].maxAmount.toLocaleString("en-US", {style:"currency", currency:"USD"})}})</span></label>
                             <input name="amount" type="number" min="0" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" placeholder="$10,000.00" class="w-full mb-2 bg-blue-300/30 p-1 rounded-md" v-model="amount">
                         </div>
                         <div class="my-3">
-                            <label for="loanId" class="text-sm md:text-base text-zinc-800 font-semibold mt-3">Select Monthly Payments</label>
-                            <select name="loanId"  class="w-full mb-6 bg-blue-300/30 p-1 rounded-md" v-model="payments">
+                            <label for="loanId" class="text-lg mb-2 text-zinc-800 font-semibold mt-3">Select Monthly Payments</label>
+                            <select name="loanId"  class="w-full mb-3 bg-blue-300/30 p-1 rounded-md" v-model="payments">
                                 <option value="" disabled selected>Select The Number Of Payments</option>
                                 <option v-for="payment in availableLoans[1].payments" :value="payment" >{{payment}}</option>
                             </select>
                         </div>
+                        <div>
+                            <p>Estimated Total: <span class="text-slate-800 font-semibold">{{(amount * (1 + availableLoans[1].interest )).toLocaleString("en-US", {style: "currency", currency: "USD"})}}</span></p>
+                        </div>
                     </div>
                     <div v-if="loanId == 3">
                         <div class="my-3">
-                            <label for="amount" class="text-sm md:text-base text-zinc-800 font-semibold mt-3">Select The Financing Amount <span class=" text-gray-500">(Maximum Amount: {{availableLoans[2].maxAmount.toLocaleString("en-US", {style:"currency", currency:"USD"})}})</span></label>
+                            <label for="amount" class="text-lg mb-2 text-zinc-800 font-semibold mt-3">Select The Financing Amount <span class=" text-gray-500">(Maximum Amount: {{availableLoans[2].maxAmount.toLocaleString("en-US", {style:"currency", currency:"USD"})}})</span></label>
                         <input name="amount" type="number" min="0" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" placeholder="$10,000.00" class="w-full mb-2 bg-blue-300/30 p-1 rounded-md" v-model="amount">
                         </div>
                         <div class="my-3">
-                            <label for="loanId" class="text-sm md:text-base text-zinc-800 font-semibold mt-3">Select Monthly Payments</label>
-                            <select name="loanId"  class="w-full mb-6 bg-blue-300/30 p-1 rounded-md" v-model="payments">
+                            <label for="loanId" class="text-lg mb-2 text-zinc-800 font-semibold mt-3">Select Monthly Payments</label>
+                            <select name="loanId"  class="w-full mb-3 bg-blue-300/30 p-1 rounded-md" v-model="payments">
                                 <option value="" disabled selected>Select The Number Of Payments</option>
                                 <option v-for="payment in availableLoans[2].payments" :value="payment" >{{payment}}</option>
                             </select>
                         </div>
+                        <div>
+                            <p>Estimated Total: <span class="text-slate-800 font-semibold">{{(amount * (1 + availableLoans[2].interest )).toLocaleString("en-US", {style: "currency", currency: "USD"})}}</span></p>
+                        </div>
                     </div>
-                    <button type="submit" class="w-8/12 lg:w-5/12 px-3 py-2 mb-3 mt-3 bg-[#004481] text-white lg:text-slate-300 rounded-md text-sm shadow-sm lg:hover:text-white lg:hover:bg-[#004481]">Submit Application</button>
+                    <button type="submit" class="w-8/12 place-self-center lg:w-5/12 px-3 py-2 mb-3 mt-3 bg-[#004481] text-white lg:text-slate-300 rounded-md text-sm shadow-sm lg:hover:text-white lg:hover:bg-[#004481]">Submit Application</button>
                     <div v-if="error">
                         <p class="text-red-500 text-center text-md">*{{error}}</p>
                     </div>
