--- a/src/main/resources/static/web/pages/accounts.html
+++ b/src/main/resources/static/web/pages/accounts.html
@@ -161,35 +161,10 @@
                     </template>
                 </div>
                 <div class="w-full lg:pb-5 md:flex-row flex gap-4 md:justify-around flex-col items-center justify-center my-3">
-                    <button v-show="accounts.length < 3" @click="createAccount()" class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">Create Account</button>
-                    <button v-show="accounts.length > 0" @click="openAccountSelectionModal()" class="bg-transparent hover:bg-red-600 text-red-600 font-semibold hover:text-white py-2 px-4 border border-red-500 hover:border-transparent rounded">Delete Account</button>
+                    <a v-show="accounts.length < 3" href="./createAcc.html" class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">Create Account</a>
+                    <a v-show="accounts.length > 0" href="./confirmDeleteAcc.html" class="bg-transparent hover:bg-red-600 text-red-600 font-semibold hover:text-white py-2 px-4 border border-red-500 hover:border-transparent rounded">Delete Account</a>
                 </div>
             </fieldset>
-            
-                <!-- <div v-if="showAccountSelectionModal">
-                    <transition name="fade">
-                        <div @click="onToggle()" class="absolute  h-[100dvh] bg-black opacity-70 inset-0 z-0"></div>
-                        <div class="w-full max-w-lg p-3 relative mx-auto my-auto rounded-xl shadow-lg bg-white">
-                          <div>
-                            <div class="text-center p-3 flex-auto justify-center leading-6"></div>
-                            <div class="p-3 mt-2 text-center space-x-4 md:block">
-                              <button
-                                @click="confirmDeleteCard()"
-                                class="mb-2 md:mb-0 bg-red-500 border border-red-500 px-5 py-2 text-sm shadow-sm font-medium tracking-wider text-white rounded-md hover:shadow-lg hover:bg-red-600"
-                              >
-                                Delete Card
-                              </button>
-                              <button
-                                @click="onToggle()"
-                                class="mb-2 md:mb-0 bg-gray-200 border border-gray-300 px-5 py-2 text-sm shadow-sm font-medium tracking-wider text-gray-700 rounded-md hover:shadow-lg hover:bg-gray-300"
-                              >
-                                Cancel
-                              </button>
-                            </div>
-                          </div>
-                        </div>
-                    </transition>
-                </div> -->
 
             <template v-if="loans.length == 0">
                 <fieldset class="flex flex-col border border-blue-500 w-11/12 rounded-lg mt-8 mb-10 lg:mb-16">
