--- a/src/main/resources/static/web/pages/confirmDeleteAcc.html
+++ b/src/main/resources/static/web/pages/confirmDeleteAcc.html
@@ -101,7 +101,7 @@
                     <option value="" disabled selected>Select an account</option>
                     <option v-for="account in accounts" :value="account.id">{{ account.number }}</option>
                 </select>
-                <p class="text-xs text-gray-500 mb-5 ml-1">*By confirming this action I am aware that the selected account will be permanently deleted</p>
+                <p class="text-xs text-gray-500 mb-5 ml-1">*By confirming this action I am aware that the selected account will be permanently deleted. Please remember that you can only delete accounts without available funds.</p>
                 <button type="submit" class="w-full lg:place-self-center lg:w-5/12 bg-transparent justify-center hover:bg-red-600 text-red-600 font-semibold hover:text-white py-2 px-4 border border-red-500 hover:border-transparent rounded">Permanently Delete Account</button>
                 <p v-if="error" class="text-red-500 mt-3 text-center">{{ error }}</p>
             </form>
