--- a/src/main/resources/static/web/pages/loan-application.html
+++ b/src/main/resources/static/web/pages/loan-application.html
@@ -112,12 +112,12 @@
                         <option value="" disabled selected>Select Account</option>
                         <option v-for="account in accounts" :value="account.number">{{account.number}}</option>
                     </select>
-                    <label for="loanId" class="text-lg mb-2 text-zinc-800 font-semibold mt-3">Loan Type</label>
-                    <select name="loanId"  class="w-full mb-3 bg-blue-300/30 p-1 rounded-md" v-model="loanId">
+                    <label for="name" class="text-lg mb-2 text-zinc-800 font-semibold mt-3">Loan Type</label>
+                    <select name="name"  class="w-full mb-3 bg-blue-300/30 p-1 rounded-md" v-model="name">
                         <option value="" disabled selected>Select The Type Of Loan You Want</option>
-                        <option v-for="availableLoan in availableLoans" :value="availableLoan.id">{{availableLoan.name}}</option>
+                        <option v-for="availableLoan in availableLoans" :value="availableLoan.name">{{availableLoan.name}}</option>
                     </select>
-                    <div v-if="loanId == 1">
+                    <div v-if="name == 'Mortgage Loan'">
                         <div class="my-3">
                             <label for="amount" class="text-lg mb-2 text-zinc-800 font-semibold mt-3">Select The Financing Amount <span class=" text-gray-500">(Maximum Amount: {{availableLoans[0].maxAmount.toLocaleString("en-US", {style:"currency", currency:"USD"})}})</span></label>
                             <input name="amount" type="number" min="0" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" placeholder="$10,000.00" class="w-full mb-2 bg-blue-300/30 p-1 rounded-md" v-model="amount">
@@ -133,7 +133,7 @@
                             <p>Estimated Total: <span class="text-slate-800 font-semibold">{{(amount * (1 + availableLoans[0].interest )).toLocaleString("en-US", {style: "currency", currency: "USD"})}}</span></p>
                         </div>
                     </div>
-                    <div v-if="loanId == 2">
+                    <div v-if="name == 'Personal Loan'">
                         <div class="my-3">
                             <label for="amount" class="text-lg mb-2 text-zinc-800 font-semibold mt-3">Select The Financing Amount <span class=" text-gray-500">(Maximum Amount: {{availableLoans[1].maxAmount.toLocaleString("en-US", {style:"currency", currency:"USD"})}})</span></label>
                             <input name="amount" type="number" min="0" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" placeholder="$10,000.00" class="w-full mb-2 bg-blue-300/30 p-1 rounded-md" v-model="amount">
@@ -149,7 +149,7 @@
                             <p>Estimated Total: <span class="text-slate-800 font-semibold">{{(amount * (1 + availableLoans[1].interest )).toLocaleString("en-US", {style: "currency", currency: "USD"})}}</span></p>
                         </div>
                     </div>
-                    <div v-if="loanId == 3">
+                    <div v-if="loanId == 'Auto Finance'">
                         <div class="my-3">
                             <label for="amount" class="text-lg mb-2 text-zinc-800 font-semibold mt-3">Select The Financing Amount <span class=" text-gray-500">(Maximum Amount: {{availableLoans[2].maxAmount.toLocaleString("en-US", {style:"currency", currency:"USD"})}})</span></label>
                         <input name="amount" type="number" min="0" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" placeholder="$10,000.00" class="w-full mb-2 bg-blue-300/30 p-1 rounded-md" v-model="amount">
