--- a/src/main/resources/static/web/admin/manager.html
+++ b/src/main/resources/static/web/admin/manager.html
@@ -7,7 +7,7 @@
     <title>Client Manager</title>
 </head>
 <body>
-    <header class="flex justify-center md:justify-start md:ml-9">
+    <header class="flex flex-col justify-around items-center lg:flex-row lg:justify-between z-10 h-[10rem] lg:h-[4rem] bg-[#004481] lg:fixed lg:w-full lg:top-0">
         <h1 class="font-bold text-3xl">Client Manager</h1>
     </header>
     <div id="app" class="container mx-auto">
