--- a/src/main/resources/static/web/pages/loan-application.html
+++ b/src/main/resources/static/web/pages/loan-application.html
@@ -136,7 +136,7 @@
                         <label for="loanId" class="text-lg mb-2 text-zinc-800 font-semibold mt-3">Select Monthly Payments</label>
                         <select name="loanId" class="w-full mb-3 bg-blue-300/30 p-1 rounded-md" v-model="payments">
                             <option value="" disabled selected>Select The Number Of Payments</option>
-                            <option v-for="payment in selectedLoanType.payments" :value="payment">{{payment}}</option>
+                            <option v-for="payments in availableLoan.payments" :value="payments">{{payments}}</option>
                         </select>
                     </div>
                     <div>
