--- a/src/main/resources/static/web/pages/transfers.html
+++ b/src/main/resources/static/web/pages/transfers.html
@@ -122,7 +122,7 @@
                     </select>
                     
                     <label for="text" class="text-lg mb-1 text-zinc-800 font-semibold mt-3">Amount</label>
-                    <input type="num" name="amount" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" placeholder="$10,000.00" class="w-full mb-2 bg-blue-300/30 p-1 rounded-md" v-model="amount">
+                    <input type="number" name="amount" pattern="^\$\d{1,3}(,\d{3})*(\.\d+)?$" placeholder="$10,000.00" class="w-full mb-2 bg-blue-300/30 p-1 rounded-md" v-model="amount">
                     <label for="description" class="text-lg mb-1 text-zinc-800 font-semibold mt-3">Description</label>
                     <input type="text" name="description" value="description" placeholder="Describe the transaction" class="w-full mb-2 bg-blue-300/30 p-1 rounded-md" v-model="description">
                     <button type="submit" class="w-8/12 lg:w-5/12 place-self-center px-3 py-2 mb-3 mt-6 bg-[#004481] text-white lg:bg-[#004481]/60  lg:text-slate-300 rounded-md text-sm shadow-sm lg:hover:text-white lg:hover:bg-[#004481]">Transfer</button>
