--- a/src/main/resources/static/web/login/login.html
+++ b/src/main/resources/static/web/login/login.html
@@ -65,8 +65,6 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <script src="../assets/assetsScripts/login.js"></script>
-    <script type="module" src="../assets/assetsStyles/tailwind.config.extension.js"></script>
-    <script type="module" src="../assets/assetsStyles/tailwind.config.js"></script>
+    <script src="../login/login.js"></script>
 </body>
 </html>
