--- a/src/main/resources/static/web/login/login.html
+++ b/src/main/resources/static/web/login/login.html
@@ -30,7 +30,7 @@
                     <button href="../pages/accounts.html" @click="loginEvent()" class="w-full px-3 py-2 my-3 lg:mt-8 bg-[#004481] text-slate-300 rounded-md text-sm shadow-sm hover:text-white">Log In</button>
                 </form>
             </div>
-            <div class="flex flex-col items-center gap-3 py-3 w-full sm:w-8/12 lg:w-5/12">
+            <div class="flex flex-col items-center gap-3 py-3 w-11/12 sm:w-10/12 md:w-6/12 lg:w-5/12">
                 <h2 class="font-bold text-2xl lg:text-3xl text-[#004481]/80">Don't have an account yet?</h2>
                 <form class="register-form" @submit.prevent >
                     <input type="text" placeholder="First Name*" v-model="firstName" class="w-full my-2 px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
@@ -58,7 +58,7 @@
     </main>
     </div>  
     <footer>
-        <div class="hidden lg:flex lg:flex-col lg:items-center lg:justify-center lg:gap-1 bg-white h-[4rem] border-t border-slate-700">
+        <div class="flex flex-col items-center justify-center gap-1 bg-white h-[4rem] border-t border-slate-700">
             <p class="text-lg text-gray-500">Assurance National Bank © 2023 - All Rights Reserved</p>
             <p class="text-xs text-gray-500">Created By: Daniela Ramos-Castro</p>
         </div>
