--- a/src/main/resources/static/web/login/login.html
+++ b/src/main/resources/static/web/login/login.html
@@ -18,19 +18,29 @@
     <div id="app">
     <main class="flex flex-col gap-4 items-center lg:flex-row flex-wrap lg:justify-around min-h-fit lg:min-h-[82dvh]">
         <div class="w-10/12 gap-4 lg:w-8/12 py-6 lg:gap-8 items-center mt-5 flex flex-col lg:flex-row lg:justify-around ">
-            <div class="flex flex-col lg:w-6/12 items-center border-b-2 gap-3 py-4 pb-9 lg:pr-10 border-b-[#004481] lg:border-r-2 lg:border-r-[#004481] lg:border-b-0">
-                <h1 class="font-bold text-2xl lg:text-3xl text-[#004481] lg:text-start">Log In To Your Online Bank Account</h1>
+            <div class="flex flex-col lg:w-6/12 border-b-2 gap-3 py-4 pb-9 lg:pr-10 border-b-[#004481] lg:border-r-2 lg:border-r-[#004481] lg:border-b-0">
+                <h1 class="font-bold text-2xl lg:text-3xl w-full text-[#004481] lg:text-start">Log In To Your Online Bank Account</h1>
                 <form class="login-form" @submit.prevent>
-                    <input type="text" placeholder="Username*" v-model="email" class="w-full my-2 px-3 py-2 lg:my-4 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
+                    <input type="text" placeholder="Username*" v-model="email" class="w-full lg:w-11/12 my-2 px-3 py-2 lg:my-4 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
                     invalid:border-pink-500 invalid:text-pink-600
                     focus:invalid:border-pink-500 focus:invalid:ring-pink-500 required:border-pink-600 required:ring-pink-500">
-                    <input type="password" placeholder="Password*" v-model="password" class="w-full my-2 px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
+                    
+                    <input type="password" placeholder="Password*" v-model="password" class="w-full lg:w-11/12 my-2 px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
                     invalid:border-pink-500 invalid:text-pink-600
                     focus:invalid:border-pink-500 focus:invalid:ring-pink-500 required:border-pink-600 required:ring-pink-500">
-                    <button href="../pages/accounts.html" @click="loginEvent()" class="w-full px-3 py-2 my-3 lg:mt-8 bg-[#004481] text-slate-300 rounded-md text-sm shadow-sm hover:text-white">Log In</button>
+                
+                    <div class="flex items-center align-middle w-full lg:w-11/12 justify-between my-2 lg:mt-1">
+                        <div class="flex items-center">
+                            <input type="checkbox" id="remember-me" name="remember-me">
+                            <label for="remember-me" class="text-slate-500 text-xs ml-2">Remember me</label>
+                        </div>
+
+                        <a href="#" class="text-xs text-blue-900">Forgot Password</a>
+                    </div>
+                    <button href="../pages/accounts.html" @click="loginEvent()" class="w-full lg:w-11/12 px-3 py-2 my-3 lg:my-3 bg-[#004481] text-slate-300 rounded-md text-sm shadow-sm hover:text-white">Log In</button>
                 </form>
             </div>
-            <div class="flex flex-col items-center gap-3 py-3 w-11/12 sm:w-10/12 md:w-6/12 lg:w-5/12">
+            <div class="flex flex-col items-center gap-3 py-3 w-10/12 sm:w-10/12 md:w-6/12 lg:w-5/12">
                 <h2 class="font-bold text-2xl lg:text-3xl text-[#004481]/80">Don't have an account yet?</h2>
                 <form class="register-form" @submit.prevent >
                     <input type="text" placeholder="First Name*" v-model="firstName" class="w-full my-2 px-3 py-2 bg-white border border-slate-300 rounded-md text-sm shadow-sm placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none
