--- a/src/main/resources/static/web/login/login.html
+++ b/src/main/resources/static/web/login/login.html
@@ -69,7 +69,7 @@
     </div>  
     <footer>
         <div class="flex flex-col items-center justify-center gap-1 bg-white h-[4rem] border-t border-slate-700">
-            <p class="text-lg text-gray-500">Assurance National Bank © 2023 - All Rights Reserved</p>
+            <p class="text-sm sm:text-lg text-gray-500 text-center">Assurance National Bank © 2023 - All Rights Reserved</p>
             <p class="text-xs text-gray-500">Created By: Daniela Ramos-Castro</p>
         </div>
     </footer>
