--- a/src/main/resources/static/web/login/login.html
+++ b/src/main/resources/static/web/login/login.html
@@ -38,6 +38,9 @@
                         <a href="#" class="text-xs text-blue-900">Forgot Password</a>
                     </div>
                     <button href="../pages/accounts.html" @click="loginEvent()" class="w-full lg:w-11/12 px-3 py-2 my-3 lg:my-3 bg-[#004481] text-slate-300 rounded-md text-sm shadow-sm hover:text-white">Log In</button>
+                    <div v-if="error">
+                        <p class="text-red-500 text-center text-md">*{{error}}</p>
+                    </div>
                 </form>
             </div>
             <div class="flex flex-col items-center gap-3 py-3 w-10/12 sm:w-10/12 md:w-6/12 lg:w-5/12">
@@ -57,8 +60,8 @@
                     focus:invalid:border-pink-500 focus:invalid:ring-pink-500 required:border-pink-600 required:ring-pink-500">
                     <p class="text-slate-500 text-xs my-2">By clicking in "Register", you agree to our <a href="#" class="text-blue-900">Terms of Service</a> and <a href="#" class="text-blue-900">Privacy Policy</a>.</p>
                     <button @click="register()" class="w-full px-3 py-2 my-3 bg-[#004481]/60 text-slate-300 rounded-md text-sm shadow-sm hover:text-white hover:bg-[#004481]">Register</button>
-                    <div v-if="error">
-                        <p class="text-red-500 text-center text-md">*{{error}}</p>
+                    <div v-if="errorReg">
+                        <p class="text-red-500 text-center text-md">*{{errorReg}}</p>
                     </div>
                 </form>
             </div>
