Sprint 11, Deploy details with env configurations

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
     <div id="app">
         <header>
             <nav class="flex flex-row px-7 md:px-10 justify-around items-center lg:flex-row z-10 h-[4rem] lg:h-[5rem] bg-[#004481] fixed w-full top-0">
-                <a href="./web/login/login.html" class="group flex flex-col lg:hidden">
+                <a href="./web/login/login.html" class="group flex flex-col align-middle lg:hidden">
                     <svg width="28px" height="28px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg" fill="#ffffff" stroke="#ffffff">
 
                         <g id="SVGRepo_bgCarrier" stroke-width="0"/>
